# web-tml24c

./: CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html
.agentrail/: saga.toml  step0-summary.md
.agentrail/sessions/: 13993b99-f691-4d09-8dba-bfbac3e1b967.jsonl  a9fe1b4e-559a-46e6-ab01-f81f433b0467.jsonl
.agentrail/steps/001-research-and-scaffold/: prompt.md  step.toml  summary.md
.agentrail/steps/002-lisp-wasm/: step.toml
.agentrail/steps/003-repl/: step.toml  summary.md
.agentrail/steps/004-examples/: step.toml  summary.md
.agentrail/steps/005-trace/: step.toml
asm/: repl-bare.s  repl-full.s  repl-minimal.s  repl-scheme.s  repl-standard.s  tml24c.s
docs/: plan.md
pages/: index.html  web-tml24c-6d937bf2a6658acf.js  web-tml24c-70c9677ec2759fe5_bg.wasm  web-tml24c-74ae614512b5c833.js  web-tml24c-74ae614512b5c833_bg.wasm  web-tml24c-7f9399870b40845_bg.wasm  web-tml24c-94ade6e26e680f90_bg.wasm  web-tml24c-a3951b5ff272c54a.js  web-tml24c-b9f959d33b6a8927.js  web-tml24c-eb84949f9f91ebc6.js
scripts/: build-all.sh  serve.sh
src/: config.rs  demos.rs  lib.rs  repl.css  repl.rs
