[package]
name = "web-tml24c"
version = "0.1.0"
edition = "2024"
authors = ["Michael A Wright"]
license = "MIT"
description = "Browser-based Tiny Macro Lisp REPL on COR24"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cor24-emulator = { path = "../../sw-embed/cor24-rs", default-features = false }
cor24-isa = { path = "../../sw-embed/cor24-rs/isa", features = ["serde"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "HtmlTextAreaElement", "HtmlElement"] }
gloo = "0.11"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
